# claustrum

./: .gitignore  README.md  plan.md  pyproject.toml
.claude/: mind.mv2
configs/: base.yaml
scripts/: prepare_data.py  train.py
src/claustrum/: __init__.py  cli.py
src/claustrum/data/: __init__.py  collators.py  dataset.py  loaders.py  preprocessing.py
src/claustrum/evaluation/: __init__.py  metrics.py
src/claustrum/inference/: __init__.py  embedder.py  export.py  index.py
src/claustrum/lifting/: __init__.py  base.py  esil.py  factory.py  pcode.py  vex.py
src/claustrum/model/: __init__.py  config.py  encoder.py  gnn.py  pooling.py  pretraining.py
src/claustrum/normalization/: __init__.py  normalized_ir.py  normalizer.py  register_mapping.py
src/claustrum/tokenization/: __init__.py  tokenizer.py  vocabulary.py
src/claustrum/tracing/: __init__.py  collector.py  masking.py  predictor.py
src/claustrum/training/: __init__.py  curriculum.py  losses.py  negative_mining.py  trainer.py
src/claustrum/utils/: __init__.py  hashing.py  logging.py  types.py
tests/: __init__.py
tests/integration/: __init__.py  test_data_pipeline.py
tests/unit/: __init__.py  test_model.py  test_tokenizer.py  test_tracing.py
