[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claustrum"
version = "0.1.0"
description = "Cross-ISA Semantic Code Embedding System for Binary Analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CLAUSTRUM Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.0",
    
    # Graph Neural Networks
    "torch-geometric>=2.4.0",
    "networkx>=3.2",
    
    # Vector Search / Indexing
    "faiss-cpu>=1.7.4",
    
    # Binary Analysis
    "angr>=9.2.0",          # VEX IR lifting
    "capstone>=5.0.0",       # Disassembly
    "pyvex>=9.2.0",          # VEX bindings
    "archinfo>=9.2.0",       # Architecture information
    "r2pipe>=1.8.0",         # Radare2 for ESIL
    
    # Data Processing
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "datasets>=2.15.0",
    
    # Metrics & Evaluation
    "scikit-learn>=1.3.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "omegaconf>=2.3.0",
    
    # Distributed Training
    "accelerate>=0.25.0",
    
    # Model Export
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
tracing = [
    "unicorn>=2.0.0",       # CPU emulation for trace collection
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
gpu = [
    "faiss-gpu>=1.7.4",
    "tensorrt>=8.6.0",
]
ghidra = [
    "pyhidra>=1.0.0",       # Ghidra Python bindings
]
tracing = [
    "unicorn>=2.0.0",       # CPU emulation for trace collection
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]
all = [
    "claustrum[dev,gpu,ghidra,tracing,docs]",
]

[project.scripts]
claustrum = "claustrum.cli:main"
claustrum-train = "claustrum.training.cli:main"
claustrum-eval = "claustrum.evaluation.cli:main"
claustrum-embed = "claustrum.inference.cli:main"

[project.urls]
Homepage = "https://github.com/claustrum/claustrum"
Documentation = "https://claustrum.readthedocs.io"
Repository = "https://github.com/claustrum/claustrum"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claustrum = ["configs/*.yaml", "data/*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["claustrum"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=claustrum --cov-report=term-missing"
asyncio_mode = "auto"
